colors and favicon

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -3,21 +3,21 @@ http://ionicframework.com/docs/theming/ */
 
 /** Ionic CSS Variables **/
 :root {
-  /** primary **/
-  --ion-color-primary: #3880ff;
-  --ion-color-primary-rgb: 56, 128, 255;
+  /** primary (custom) **/
+  --ion-color-primary: #607D8B;
+  --ion-color-primary-rgb: 96,125,139;
   --ion-color-primary-contrast: #ffffff;
-  --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3171e0;
-  --ion-color-primary-tint: #4c8dff;
+  --ion-color-primary-contrast-rgb: 255,255,255;
+  --ion-color-primary-shade: #546e7a;
+  --ion-color-primary-tint: #708a97;
 
-  /** secondary **/
-  --ion-color-secondary: #3dc2ff;
-  --ion-color-secondary-rgb: 61, 194, 255;
+  /** secondary (custom) **/
+  --ion-color-secondary: #536DFE;
+  --ion-color-secondary-rgb: 83,109,254;
   --ion-color-secondary-contrast: #ffffff;
-  --ion-color-secondary-contrast-rgb: 255, 255, 255;
-  --ion-color-secondary-shade: #36abe0;
-  --ion-color-secondary-tint: #50c8ff;
+  --ion-color-secondary-contrast-rgb: 255,255,255;
+  --ion-color-secondary-shade: #4960e0;
+  --ion-color-secondary-tint: #647cfe;
 
   /** tertiary **/
   --ion-color-tertiary: #5260ff;
