--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -83,19 +83,21 @@ http://ionicframework.com/docs/theming/ */
    */
 
   body {
-    --ion-color-primary: #428cff;
-    --ion-color-primary-rgb: 66,140,255;
+    /** primary (custom) **/
+    --ion-color-primary: #607D8B;
+    --ion-color-primary-rgb: 96,125,139;
     --ion-color-primary-contrast: #ffffff;
     --ion-color-primary-contrast-rgb: 255,255,255;
-    --ion-color-primary-shade: #3a7be0;
-    --ion-color-primary-tint: #5598ff;
+    --ion-color-primary-shade: #546e7a;
+    --ion-color-primary-tint: #708a97;
 
-    --ion-color-secondary: #50c8ff;
-    --ion-color-secondary-rgb: 80,200,255;
+    /** secondary (custom) **/
+    --ion-color-secondary: #536DFE;
+    --ion-color-secondary-rgb: 83,109,254;
     --ion-color-secondary-contrast: #ffffff;
     --ion-color-secondary-contrast-rgb: 255,255,255;
-    --ion-color-secondary-shade: #46b0e0;
-    --ion-color-secondary-tint: #62ceff;
+    --ion-color-secondary-shade: #4960e0;
+    --ion-color-secondary-tint: #647cfe;
 
     --ion-color-tertiary: #6a64ff;
     --ion-color-tertiary-rgb: 106,100,255;
