--- a/src/pages/Accordion.css
+++ b/src/pages/Accordion.css
@@ -8,8 +8,8 @@
     border-radius: 2px;
 }
 
-.prayer-accordion-item + .prayer-accordion-item {
-    border-top: 1px solid #b6b6b6;
+.prayer-accordion-item {
+    border-bottom: 1px solid #b6b6b6;
 }
 
 .accordion-button {
