--- a/src/pages/Accordion.css
+++ b/src/pages/Accordion.css
@@ -9,7 +9,7 @@
 }
 
 .prayer-accordion-item {
-    border-bottom: 1px solid #b6b6b6;
+    border-bottom: 1px solid var(--ion-color-light-shade);
 }
 
 .accordion-button {
